2008-05-21  George McCollister  <georgem@novatech-llc.com>

	* daemon/opd_cookie.c: Fix ARM big-endian syscall

2008-05-20  Jason Yeh  <jason.yeh@amd.com>

	* events/x86_64/hammer/events:
	* events/x86_64/hammer/unit_masks:
	* events/x86_64/family10/events:
	* events/x86_64/family10/unit_masks: update for recent BKDG
	revisions

2008-05-19  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/profile_spec.cpp: Fix bug in differential profile
	  when using archive spec and an image spec

2008-05-19  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/format_output.cpp:
	* libpp/xml_utils.cpp:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h: Do not to try to get symbol contents
	  for artificial symbols and other cases where no symbol contents
	  exist.  Also change to use scoped array for symbol contents
	  instead of automatic allocation from the stack to avoid allocation
	  attempt exceeding max stack size.

2008-05-09  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in:
	* Makefile.am: Improve error messages for special user account checks

2008-05-08  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/callgraph_container.cpp:
	* libpp/profile_container.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: Fix to allow 32-bit opreport to
	  properly process samples from 64-bit JIT profile agent

2008-04-29  René Rebe  <rene@exactcode.de>

        * libabi/opimport.cpp:
        * libpp/op_header.cpp:
        * libpp/profile.cpp:
        * libutil++/bfd_support.cpp:
        * libutil++/cverb.cpp:
        * libutil++/op_bfd.cpp:
        * libutil++/op_spu_bfd.cpp:
        * pp/common_option.cpp:
        * pp/opannotate_options.cpp:
        * pp/oparchive.cpp:
        * pp/opgprof_options.cpp: added explicit includes for C functions
	  as required for compilation with GCC-4.3

2008-04-28  Daniel Hansel <daniel.hansel@linux.vnet.ibm.com>

	* oprofile/agents/jvmpi/jvmpi_oprofile.cpp:
	* oprofile/agents/jvmpi/Makefile.am:
	* oprofile/agents/jvmti/libjvmti_oprofile.c: